Total Distance Formula Revised

--- a/user_tools/scripts/data_loader.ipynb
+++ b/user_tools/scripts/data_loader.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4          25    GarminSD  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "4  [1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...        []  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "4  [7.275957614183426e-12, 116.42740204040987, 77...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,9 +557,9 @@
        "      <td>[1.2960299500264227e-11, 143.05125737182817, 5...</td>\n",
        "      <td>0.361479</td>\n",
        "      <td>0.259783</td>\n",
-       "      <td>10.162003</td>\n",
-       "      <td>1520.0</td>\n",
-       "      <td>148.8736</td>\n",
+       "      <td>0.099689</td>\n",
+       "      <td>14.91120</td>\n",
+       "      <td>1825.56252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -572,9 +572,9 @@
        "      <td>[9.094947017729282e-13, 75.0235079481899, 31.0...</td>\n",
        "      <td>-0.154103</td>\n",
        "      <td>-0.599913</td>\n",
-       "      <td>9.286288</td>\n",
-       "      <td>1508.0</td>\n",
-       "      <td>148.8192</td>\n",
+       "      <td>0.091098</td>\n",
+       "      <td>14.79348</td>\n",
+       "      <td>1824.89544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -587,9 +587,9 @@
        "      <td>[2.2737367544323206e-13, 91.25440903139302, 81...</td>\n",
        "      <td>0.029643</td>\n",
        "      <td>-0.209197</td>\n",
-       "      <td>10.692694</td>\n",
-       "      <td>1516.0</td>\n",
-       "      <td>148.9952</td>\n",
+       "      <td>0.104895</td>\n",
+       "      <td>14.87196</td>\n",
+       "      <td>1827.05364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -602,9 +602,9 @@
        "      <td>[1.3642420526593924e-11, 101.37768172754973, 7...</td>\n",
        "      <td>0.497013</td>\n",
        "      <td>0.355193</td>\n",
-       "      <td>10.101564</td>\n",
-       "      <td>1520.0</td>\n",
-       "      <td>148.9120</td>\n",
+       "      <td>0.099096</td>\n",
+       "      <td>14.91120</td>\n",
+       "      <td>1826.03340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -617,9 +617,9 @@
        "      <td>[7.275957614183426e-12, 116.42740204040987, 77...</td>\n",
        "      <td>-0.316861</td>\n",
        "      <td>-0.086010</td>\n",
-       "      <td>9.912048</td>\n",
-       "      <td>1512.0</td>\n",
-       "      <td>149.0464</td>\n",
+       "      <td>0.097237</td>\n",
+       "      <td>14.83272</td>\n",
+       "      <td>1827.68148</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -647,15 +647,15 @@
        "3  [1.3642420526593924e-11, 101.37768172754973, 7...  0.497013  0.355193   \n",
        "4  [7.275957614183426e-12, 116.42740204040987, 77... -0.316861 -0.086010   \n",
        "\n",
-       "      StdDev  MaxAcceleration  TotalDistance  \n",
-       "0  10.162003           1520.0       148.8736  \n",
-       "1   9.286288           1508.0       148.8192  \n",
-       "2  10.692694           1516.0       148.9952  \n",
-       "3  10.101564           1520.0       148.9120  \n",
-       "4   9.912048           1512.0       149.0464  "
+       "     StdDev  MaxAcceleration  TotalDistance  \n",
+       "0  0.099689         14.91120     1825.56252  \n",
+       "1  0.091098         14.79348     1824.89544  \n",
+       "2  0.104895         14.87196     1827.05364  \n",
+       "3  0.099096         14.91120     1826.03340  \n",
+       "4  0.097237         14.83272     1827.68148  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,51 +711,36 @@
     "# Sampling frequency (25 Hz)\n",
     "sampling_rate = 25  # in Hz\n",
     "\n",
-    "# Function to calculate additional features\n",
-    "def calculate_additional_features(raw_data):\n",
-    "    # Calculate Skewness\n",
-    "    skewness = skew(raw_data)\n",
-    "    \n",
-    "    # Calculate Kurtosis\n",
-    "    kurt = kurtosis(raw_data)\n",
-    "    \n",
-    "    # Calculate Standard Deviation\n",
-    "    std_dev = np.std(raw_data)\n",
-    "    \n",
-    "    # Calculate Maximum Acceleration\n",
-    "    max_acceleration = np.max(np.abs(raw_data))  # Max magnitude of acceleration\n",
-    "    \n",
-    "    # Calculate Total Distance Traveled (using numerical integration of acceleration)\n",
-    "    # Distance = 0.5 * acceleration * (time_step)^2 (for each timestep)\n",
-    "    time_step = 1 / sampling_rate  # time per sample in seconds\n",
-    "    distance_traveled = 0.5 * raw_data * time_step**2\n",
-    "    total_distance = np.sum(np.abs(distance_traveled))  # Sum of absolute distances\n",
-    "    \n",
-    "    return skewness, kurt, std_dev, max_acceleration, total_distance\n",
     "\n",
-    "# Add new columns for each row in the DataFrame\n",
-    "additional_features = []\n",
     "\n",
-    "for _, row in df_sensordata.iterrows():\n",
-    "    # Extract rawData for the row\n",
-    "    raw_data = np.array(row['rawData'])\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sampling frequency (25 Hz)\n",
+    "sampling_rate = 25  # Hz\n",
+    "\n",
+    "# Function to calculate total distance for rawData\n",
+    "def calculate_total_distance(raw_data):\n",
+    "    # Convert from milli-g to m/s² (milli-g * 9.81 / 1000)\n",
+    "    raw_data_m_s2 = raw_data * (9.81 / 1000)\n",
     "    \n",
-    "    # Calculate additional features\n",
-    "    skewness, kurt, std_dev, max_acceleration, total_distance = calculate_additional_features(raw_data)\n",
+    "    # Calculate time step (1 / sampling rate)\n",
+    "    time_step = 1 / sampling_rate\n",
     "    \n",
-    "    # Store the result as a list of additional features\n",
-    "    additional_features.append([skewness, kurt, std_dev, max_acceleration, total_distance])\n",
+    "    # Calculate distance traveled for each timestep: d = 0.5 * a * t^2\n",
+    "    # We square the time step and multiply by 0.5 times the acceleration\n",
+    "    distance_traveled = 0.5 * raw_data_m_s2 * time_step**2\n",
+    "    \n",
+    "    # Sum the distances for the entire 5-second window (total distance)\n",
+    "    total_distance = np.sum(np.abs(distance_traveled))  # Absolute value to account for movement in any direction\n",
+    "    \n",
+    "    return total_distance\n",
     "\n",
-    "# Convert the list of additional features to a DataFrame\n",
-    "additional_features_df = pd.DataFrame(additional_features, columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration', 'TotalDistance'])\n",
+    "# Apply the function to your DataFrame and create a new 'TotalDistance' column\n",
+    "df_sensordata['TotalDistance'] = df_sensordata['rawData'].apply(lambda x: calculate_total_distance(np.array(x)))\n",
     "\n",
-    "# Concatenate the new features with the original DataFrame, making sure there are no duplicates\n",
-    "df_sensordata = pd.concat([df_sensordata.drop(columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration', 'TotalDistance'], errors='ignore'), additional_features_df], axis=1)\n",
-    "\n",
-    "# Optionally, you can view the DataFrame to confirm the new columns have been added\n",
-    "df_sensordata.to_csv('generatedCsvDatasets/features.csv', index=False)\n",
-    "\n",
-    "df_sensordata.head(5)\n"
+    "# View the updated DataFrame with the 'TotalDistance' column\n",
+    "df_sensordata.head()\n"
    ]
   },
   {
