--- a/user_tools/scripts/data_loader.ipynb
+++ b/user_tools/scripts/data_loader.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -538,10 +538,6 @@
        "      <th>rawData</th>\n",
        "      <th>rawData3D</th>\n",
        "      <th>FFT</th>\n",
-       "      <th>Skewness</th>\n",
-       "      <th>Kurtosis</th>\n",
-       "      <th>StdDev</th>\n",
-       "      <th>MaxAcceleration</th>\n",
        "      <th>TotalDistance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -555,11 +551,7 @@
        "      <td>[1496, 1480, 1500, 1492, 1496, 1484, 1500, 149...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[1.2960299500264227e-11, 143.05125737182817, 5...</td>\n",
-       "      <td>0.361479</td>\n",
-       "      <td>0.259783</td>\n",
-       "      <td>0.099689</td>\n",
-       "      <td>14.91120</td>\n",
-       "      <td>1825.56252</td>\n",
+       "      <td>1.460450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -570,11 +562,7 @@
        "      <td>[1492, 1508, 1496, 1476, 1484, 1476, 1496, 150...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[9.094947017729282e-13, 75.0235079481899, 31.0...</td>\n",
-       "      <td>-0.154103</td>\n",
-       "      <td>-0.599913</td>\n",
-       "      <td>0.091098</td>\n",
-       "      <td>14.79348</td>\n",
-       "      <td>1824.89544</td>\n",
+       "      <td>1.459916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -585,11 +573,7 @@
        "      <td>[1488, 1496, 1484, 1492, 1492, 1508, 1504, 148...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[2.2737367544323206e-13, 91.25440903139302, 81...</td>\n",
-       "      <td>0.029643</td>\n",
-       "      <td>-0.209197</td>\n",
-       "      <td>0.104895</td>\n",
-       "      <td>14.87196</td>\n",
-       "      <td>1827.05364</td>\n",
+       "      <td>1.461643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -600,11 +584,7 @@
        "      <td>[1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[1.3642420526593924e-11, 101.37768172754973, 7...</td>\n",
-       "      <td>0.497013</td>\n",
-       "      <td>0.355193</td>\n",
-       "      <td>0.099096</td>\n",
-       "      <td>14.91120</td>\n",
-       "      <td>1826.03340</td>\n",
+       "      <td>1.460827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -615,11 +595,7 @@
        "      <td>[1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[7.275957614183426e-12, 116.42740204040987, 77...</td>\n",
-       "      <td>-0.316861</td>\n",
-       "      <td>-0.086010</td>\n",
-       "      <td>0.097237</td>\n",
-       "      <td>14.83272</td>\n",
-       "      <td>1827.68148</td>\n",
+       "      <td>1.462145</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -640,22 +616,15 @@
        "3  [1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...        []   \n",
        "4  [1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...        []   \n",
        "\n",
-       "                                                 FFT  Skewness  Kurtosis  \\\n",
-       "0  [1.2960299500264227e-11, 143.05125737182817, 5...  0.361479  0.259783   \n",
-       "1  [9.094947017729282e-13, 75.0235079481899, 31.0... -0.154103 -0.599913   \n",
-       "2  [2.2737367544323206e-13, 91.25440903139302, 81...  0.029643 -0.209197   \n",
-       "3  [1.3642420526593924e-11, 101.37768172754973, 7...  0.497013  0.355193   \n",
-       "4  [7.275957614183426e-12, 116.42740204040987, 77... -0.316861 -0.086010   \n",
-       "\n",
-       "     StdDev  MaxAcceleration  TotalDistance  \n",
-       "0  0.099689         14.91120     1825.56252  \n",
-       "1  0.091098         14.79348     1824.89544  \n",
-       "2  0.104895         14.87196     1827.05364  \n",
-       "3  0.099096         14.91120     1826.03340  \n",
-       "4  0.097237         14.83272     1827.68148  "
+       "                                                 FFT  TotalDistance  \n",
+       "0  [1.2960299500264227e-11, 143.05125737182817, 5...       1.460450  \n",
+       "1  [9.094947017729282e-13, 75.0235079481899, 31.0...       1.459916  \n",
+       "2  [2.2737367544323206e-13, 91.25440903139302, 81...       1.461643  \n",
+       "3  [1.3642420526593924e-11, 101.37768172754973, 7...       1.460827  \n",
+       "4  [7.275957614183426e-12, 116.42740204040987, 77...       1.462145  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,20 +671,6 @@
     "\n",
     "# Add the FFT results to the DataFrame as a new column\n",
     "df_sensordata['FFT'] = fft_results\n",
-    "\n",
-    "# Optionally, you can view the DataFrame to confirm the FFT column has been added\n",
-    "df_sensordata.head()\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Sampling frequency (25 Hz)\n",
-    "sampling_rate = 25  # in Hz\n",
-    "\n",
-    "\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
     "# Sampling frequency (25 Hz)\n",
     "sampling_rate = 25  # Hz\n",
     "\n",
@@ -741,6 +696,202 @@
     "\n",
     "# View the updated DataFrame with the 'TotalDistance' column\n",
     "df_sensordata.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eventId</th>\n",
+       "      <th>userId</th>\n",
+       "      <th>hr</th>\n",
+       "      <th>o2Sat</th>\n",
+       "      <th>rawData</th>\n",
+       "      <th>rawData3D</th>\n",
+       "      <th>FFT</th>\n",
+       "      <th>TotalDistance</th>\n",
+       "      <th>Skewness</th>\n",
+       "      <th>Kurtosis</th>\n",
+       "      <th>StdDev</th>\n",
+       "      <th>MaxAcceleration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>407</td>\n",
+       "      <td>39</td>\n",
+       "      <td>67</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[1496, 1480, 1500, 1492, 1496, 1484, 1500, 149...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[1.2960299500264227e-11, 143.05125737182817, 5...</td>\n",
+       "      <td>1.460450</td>\n",
+       "      <td>0.361479</td>\n",
+       "      <td>0.259783</td>\n",
+       "      <td>10.162003</td>\n",
+       "      <td>1520.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>407</td>\n",
+       "      <td>39</td>\n",
+       "      <td>67</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[1492, 1508, 1496, 1476, 1484, 1476, 1496, 150...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[9.094947017729282e-13, 75.0235079481899, 31.0...</td>\n",
+       "      <td>1.459916</td>\n",
+       "      <td>-0.154103</td>\n",
+       "      <td>-0.599913</td>\n",
+       "      <td>9.286288</td>\n",
+       "      <td>1508.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>407</td>\n",
+       "      <td>39</td>\n",
+       "      <td>68</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[1488, 1496, 1484, 1492, 1492, 1508, 1504, 148...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[2.2737367544323206e-13, 91.25440903139302, 81...</td>\n",
+       "      <td>1.461643</td>\n",
+       "      <td>0.029643</td>\n",
+       "      <td>-0.209197</td>\n",
+       "      <td>10.692694</td>\n",
+       "      <td>1516.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>407</td>\n",
+       "      <td>39</td>\n",
+       "      <td>69</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[1.3642420526593924e-11, 101.37768172754973, 7...</td>\n",
+       "      <td>1.460827</td>\n",
+       "      <td>0.497013</td>\n",
+       "      <td>0.355193</td>\n",
+       "      <td>10.101564</td>\n",
+       "      <td>1520.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>407</td>\n",
+       "      <td>39</td>\n",
+       "      <td>69</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[7.275957614183426e-12, 116.42740204040987, 77...</td>\n",
+       "      <td>1.462145</td>\n",
+       "      <td>-0.316861</td>\n",
+       "      <td>-0.086010</td>\n",
+       "      <td>9.912048</td>\n",
+       "      <td>1512.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   eventId  userId  hr  o2Sat  \\\n",
+       "0      407      39  67     -1   \n",
+       "1      407      39  67     -1   \n",
+       "2      407      39  68     -1   \n",
+       "3      407      39  69     -1   \n",
+       "4      407      39  69     -1   \n",
+       "\n",
+       "                                             rawData rawData3D  \\\n",
+       "0  [1496, 1480, 1500, 1492, 1496, 1484, 1500, 149...        []   \n",
+       "1  [1492, 1508, 1496, 1476, 1484, 1476, 1496, 150...        []   \n",
+       "2  [1488, 1496, 1484, 1492, 1492, 1508, 1504, 148...        []   \n",
+       "3  [1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...        []   \n",
+       "4  [1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...        []   \n",
+       "\n",
+       "                                                 FFT  TotalDistance  Skewness  \\\n",
+       "0  [1.2960299500264227e-11, 143.05125737182817, 5...       1.460450  0.361479   \n",
+       "1  [9.094947017729282e-13, 75.0235079481899, 31.0...       1.459916 -0.154103   \n",
+       "2  [2.2737367544323206e-13, 91.25440903139302, 81...       1.461643  0.029643   \n",
+       "3  [1.3642420526593924e-11, 101.37768172754973, 7...       1.460827  0.497013   \n",
+       "4  [7.275957614183426e-12, 116.42740204040987, 77...       1.462145 -0.316861   \n",
+       "\n",
+       "   Kurtosis     StdDev  MaxAcceleration  \n",
+       "0  0.259783  10.162003           1520.0  \n",
+       "1 -0.599913   9.286288           1508.0  \n",
+       "2 -0.209197  10.692694           1516.0  \n",
+       "3  0.355193  10.101564           1520.0  \n",
+       "4 -0.086010   9.912048           1512.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function to calculate additional features\n",
+    "def calculate_additional_features(raw_data):\n",
+    "    # Calculate Skewness\n",
+    "    skewness = skew(raw_data)\n",
+    "    \n",
+    "    # Calculate Kurtosis\n",
+    "    kurt = kurtosis(raw_data)\n",
+    "    \n",
+    "    # Calculate Standard Deviation\n",
+    "    std_dev = np.std(raw_data)\n",
+    "    \n",
+    "    # Calculate Maximum Acceleration\n",
+    "    max_acceleration = np.max(np.abs(raw_data))  # Max magnitude of acceleration\n",
+    "    \n",
+    "    return skewness, kurt, std_dev, max_acceleration\n",
+    "\n",
+    "# Add new columns for each row in the DataFrame\n",
+    "additional_features = []\n",
+    "\n",
+    "for _, row in df_sensordata.iterrows():\n",
+    "    # Extract rawData for the row\n",
+    "    raw_data = np.array(row['rawData'])\n",
+    "       # Calculate additional features\n",
+    "    skewness, kurt, std_dev, max_acceleration = calculate_additional_features(raw_data)\n",
+    "    \n",
+    "    # Store the result as a list of additional features\n",
+    "    additional_features.append([skewness, kurt, std_dev, max_acceleration])\n",
+    "\n",
+    "# Convert the list of additional features to a DataFrame\n",
+    "additional_features_df = pd.DataFrame(additional_features, columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration'])\n",
+    "\n",
+    "# Concatenate the new features with the original DataFrame, making sure there are no duplicates\n",
+    "df_sensordata = pd.concat([df_sensordata.drop(columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration'], errors='ignore'), additional_features_df], axis=1)\n",
+    "\n",
+    "# Optionally, you can view the DataFrame to confirm the new columns have been added\n",
+    "df_sensordata.to_csv('generatedCsvDatasets/features.csv', index=False)\n",
+    "\n",
+    "df_sensordata.head(5)\n"
    ]
   },
   {
