--- a/user_tools/scripts/run_all_experiments.ipynb
+++ b/user_tools/scripts/run_all_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4          25    GarminSD  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "4  [1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...        []  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,14 +400,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1258</th>\n",
-       "      <td>7007</td>\n",
+       "      <th>1337</th>\n",
+       "      <td>7125</td>\n",
        "      <td>45</td>\n",
-       "      <td>79</td>\n",
+       "      <td>75</td>\n",
        "      <td>-1</td>\n",
-       "      <td>[1854, 1796, 1758, 1783, 1853, 1838, 1826, 180...</td>\n",
+       "      <td>[1714, 1736, 1725, 1723, 1725, 1711, 1726, 171...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[4.547473508864641e-12, 188.00610008310537, 21...</td>\n",
+       "      <td>[3.183231456205249e-12, 514.7892755464219, 385...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -415,16 +415,16 @@
       ],
       "text/plain": [
        "      eventId  userId  hr  o2Sat  \\\n",
-       "1258     7007      45  79     -1   \n",
+       "1337     7125      45  75     -1   \n",
        "\n",
        "                                                rawData rawData3D  \\\n",
-       "1258  [1854, 1796, 1758, 1783, 1853, 1838, 1826, 180...        []   \n",
+       "1337  [1714, 1736, 1725, 1723, 1725, 1711, 1726, 171...        []   \n",
        "\n",
        "                                                    FFT  \n",
-       "1258  [4.547473508864641e-12, 188.00610008310537, 21...  "
+       "1337  [3.183231456205249e-12, 514.7892755464219, 385...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -516,10 +516,6 @@
        "      <th>rawData</th>\n",
        "      <th>rawData3D</th>\n",
        "      <th>FFT</th>\n",
-       "      <th>Skewness</th>\n",
-       "      <th>Kurtosis</th>\n",
-       "      <th>StdDev</th>\n",
-       "      <th>MaxAcceleration</th>\n",
        "      <th>TotalDistance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -533,11 +529,7 @@
        "      <td>[1496, 1480, 1500, 1492, 1496, 1484, 1500, 149...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[1.2960299500264227e-11, 143.05125737182817, 5...</td>\n",
-       "      <td>0.361479</td>\n",
-       "      <td>0.259783</td>\n",
-       "      <td>10.162003</td>\n",
-       "      <td>1520.0</td>\n",
-       "      <td>148.8736</td>\n",
+       "      <td>1.460450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -548,11 +540,7 @@
        "      <td>[1492, 1508, 1496, 1476, 1484, 1476, 1496, 150...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[9.094947017729282e-13, 75.0235079481899, 31.0...</td>\n",
-       "      <td>-0.154103</td>\n",
-       "      <td>-0.599913</td>\n",
-       "      <td>9.286288</td>\n",
-       "      <td>1508.0</td>\n",
-       "      <td>148.8192</td>\n",
+       "      <td>1.459916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -563,11 +551,7 @@
        "      <td>[1488, 1496, 1484, 1492, 1492, 1508, 1504, 148...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[2.2737367544323206e-13, 91.25440903139302, 81...</td>\n",
-       "      <td>0.029643</td>\n",
-       "      <td>-0.209197</td>\n",
-       "      <td>10.692694</td>\n",
-       "      <td>1516.0</td>\n",
-       "      <td>148.9952</td>\n",
+       "      <td>1.461643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -578,11 +562,7 @@
        "      <td>[1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[1.3642420526593924e-11, 101.37768172754973, 7...</td>\n",
-       "      <td>0.497013</td>\n",
-       "      <td>0.355193</td>\n",
-       "      <td>10.101564</td>\n",
-       "      <td>1520.0</td>\n",
-       "      <td>148.9120</td>\n",
+       "      <td>1.460827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -593,11 +573,7 @@
        "      <td>[1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...</td>\n",
        "      <td>[]</td>\n",
        "      <td>[7.275957614183426e-12, 116.42740204040987, 77...</td>\n",
-       "      <td>-0.316861</td>\n",
-       "      <td>-0.086010</td>\n",
-       "      <td>9.912048</td>\n",
-       "      <td>1512.0</td>\n",
-       "      <td>149.0464</td>\n",
+       "      <td>1.462145</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -618,22 +594,15 @@
        "3  [1488, 1476, 1480, 1504, 1496, 1508, 1484, 148...        []   \n",
        "4  [1504, 1488, 1504, 1492, 1484, 1500, 1496, 149...        []   \n",
        "\n",
-       "                                                 FFT  Skewness  Kurtosis  \\\n",
-       "0  [1.2960299500264227e-11, 143.05125737182817, 5...  0.361479  0.259783   \n",
-       "1  [9.094947017729282e-13, 75.0235079481899, 31.0... -0.154103 -0.599913   \n",
-       "2  [2.2737367544323206e-13, 91.25440903139302, 81...  0.029643 -0.209197   \n",
-       "3  [1.3642420526593924e-11, 101.37768172754973, 7...  0.497013  0.355193   \n",
-       "4  [7.275957614183426e-12, 116.42740204040987, 77... -0.316861 -0.086010   \n",
-       "\n",
-       "      StdDev  MaxAcceleration  TotalDistance  \n",
-       "0  10.162003           1520.0       148.8736  \n",
-       "1   9.286288           1508.0       148.8192  \n",
-       "2  10.692694           1516.0       148.9952  \n",
-       "3  10.101564           1520.0       148.9120  \n",
-       "4   9.912048           1512.0       149.0464  "
+       "                                                 FFT  TotalDistance  \n",
+       "0  [1.2960299500264227e-11, 143.05125737182817, 5...       1.460450  \n",
+       "1  [9.094947017729282e-13, 75.0235079481899, 31.0...       1.459916  \n",
+       "2  [2.2737367544323206e-13, 91.25440903139302, 81...       1.461643  \n",
+       "3  [1.3642420526593924e-11, 101.37768172754973, 7...       1.460827  \n",
+       "4  [7.275957614183426e-12, 116.42740204040987, 77...       1.462145  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,51 +658,30 @@
     "# Sampling frequency (25 Hz)\n",
     "sampling_rate = 25  # in Hz\n",
     "\n",
-    "# Function to calculate additional features\n",
-    "def calculate_additional_features(raw_data):\n",
-    "    # Calculate Skewness\n",
-    "    skewness = skew(raw_data)\n",
-    "    \n",
-    "    # Calculate Kurtosis\n",
-    "    kurt = kurtosis(raw_data)\n",
-    "    \n",
-    "    # Calculate Standard Deviation\n",
-    "    std_dev = np.std(raw_data)\n",
-    "    \n",
-    "    # Calculate Maximum Acceleration\n",
-    "    max_acceleration = np.max(np.abs(raw_data))  # Max magnitude of acceleration\n",
-    "    \n",
-    "    # Calculate Total Distance Traveled (using numerical integration of acceleration)\n",
-    "    # Distance = 0.5 * acceleration * (time_step)^2 (for each timestep)\n",
-    "    time_step = 1 / sampling_rate  # time per sample in seconds\n",
-    "    distance_traveled = 0.5 * raw_data * time_step**2\n",
-    "    total_distance = np.sum(np.abs(distance_traveled))  # Sum of absolute distances\n",
-    "    \n",
-    "    return skewness, kurt, std_dev, max_acceleration, total_distance\n",
     "\n",
-    "# Add new columns for each row in the DataFrame\n",
-    "additional_features = []\n",
     "\n",
-    "for _, row in df_sensordata.iterrows():\n",
-    "    # Extract rawData for the row\n",
-    "    raw_data = np.array(row['rawData'])\n",
+    "# Function to calculate total distance for rawData\n",
+    "def calculate_total_distance(raw_data):\n",
+    "    # Convert from milli-g to m/s² (milli-g * 9.81 / 1000)\n",
+    "    raw_data_m_s2 = raw_data * (9.81 / 1000)\n",
     "    \n",
-    "    # Calculate additional features\n",
-    "    skewness, kurt, std_dev, max_acceleration, total_distance = calculate_additional_features(raw_data)\n",
+    "    # Calculate time step (1 / sampling rate)\n",
+    "    time_step = 1 / sampling_rate\n",
     "    \n",
-    "    # Store the result as a list of additional features\n",
-    "    additional_features.append([skewness, kurt, std_dev, max_acceleration, total_distance])\n",
+    "    # Calculate distance traveled for each timestep: d = 0.5 * a * t^2\n",
+    "    # We square the time step and multiply by 0.5 times the acceleration\n",
+    "    distance_traveled = 0.5 * raw_data_m_s2 * time_step**2\n",
+    "    \n",
+    "    # Sum the distances for the entire 5-second window (total distance)\n",
+    "    total_distance = np.sum(np.abs(distance_traveled))  # Absolute value to account for movement in any direction\n",
+    "    \n",
+    "    return total_distance\n",
     "\n",
-    "# Convert the list of additional features to a DataFrame\n",
-    "additional_features_df = pd.DataFrame(additional_features, columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration', 'TotalDistance'])\n",
+    "# Apply the function to your DataFrame and create a new 'TotalDistance' column\n",
+    "df_sensordata['TotalDistance'] = df_sensordata['rawData'].apply(lambda x: calculate_total_distance(np.array(x)))\n",
     "\n",
-    "# Concatenate the new features with the original DataFrame, making sure there are no duplicates\n",
-    "df_sensordata = pd.concat([df_sensordata.drop(columns=['Skewness', 'Kurtosis', 'StdDev', 'MaxAcceleration', 'TotalDistance'], errors='ignore'), additional_features_df], axis=1)\n",
-    "\n",
-    "# Optionally, you can view the DataFrame to confirm the new columns have been added\n",
-    "df_sensordata.to_csv('generatedCsvDatasets/features.csv', index=False)\n",
-    "\n",
-    "df_sensordata.head(5)\n"
+    "# View the updated DataFrame with the 'TotalDistance' column\n",
+    "df_sensordata.head()\n"
    ]
   },
   {
@@ -745,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
