--- a/user_tools/scripts/fft_plotter.ipynb
+++ b/user_tools/scripts/fft_plotter.ipynb
@@ -83,7 +83,7 @@
     "event_id = 11591\n",
     "filtered_data = df_sensordata[df_sensordata['eventId'] == event_id]\n",
     "\n",
-    "# Sampling frequency (25 Hz as per your clarification)\n",
+    "# Sampling frequency (25 Hz)\n",
     "sampling_rate = 25  # in Hz\n",
     "\n",
     "# FFT for each 5-second window (each row has 125 samples)\n",
